maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:11: error: not enough arguments for method aBiscuit: (x: Int, y: Int)Boolean.
Unspecified value parameters x, y.
      if(aBiscuit()){
                 ^ShortestPathMaze:12: error: not found: value setIndicator
        setIndicator(i,j,0)
        ^